--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -42,7 +42,7 @@
         {% load static %}<img src="{% static 'images/Mariann.JPEG' %}">
 
       {% elif name == "Michelle Rankin" %}
-        {% load static %}<img src="{% static 'imaages/Michelle Rankin.jpg' %}">
+        {% load static %}<img src="{% static 'images/Michelle Rankin.jpg' %}">
 
       {% elif name == "Quinton Summerford" %}
         {% load static %}<img src="{% static 'images/Quinton Summerford.png' %}">
@@ -54,7 +54,7 @@
         {% load static %}<img src="{% static 'images/RJay.jpeg' %}">
 
       {% elif name == "Ryan Bennett" %}
-        {% load static %}<img src="{% static 'images/Ryan Bennett.jp' %}">
+        {% load static %}<img src="{% static 'images/Ryan Bennett.jpg' %}">
 
       {% elif name == "Rylee Chisholm" %}
         {% load static %}<img src="{% static 'images/Rylee Chisolm.png' %}">
@@ -75,7 +75,7 @@
         <h2>Job:</h2>
         <h3>{{info.job}}</h3>
 
-        <h2>HomeTown</h2>
+        <h2>HomeTown:</h2>
         <h3>{{info.hometown}}</h3>
         {% endif %}
       {% endfor %}
