--- a/app/static/ourcss.css
+++ b/app/static/ourcss.css
@@ -14,9 +14,9 @@ h3 {
     margin-right: 250px;
 }
 
-.img {
-    width: 300px;
-    height: 200px;
+img {
+    width: 10em;
+    height: 12em;
     border-radius: 70%;
     display: block;
     margin-left: auto;
